--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" href="./Images/msk_logo_mad_send.jfif" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
 </head>
 <body>
-
+    <div class="loader">
+        <img class="logo" src="/Images/Msk_logo_edited.png" alt="" srcset="">
+        <img src="/Images/Rolling-1s-200px (1).gif" alt="" srcset="">
+    </div>
 <!-- ##################################################################################################################### -->
 <!-- ######################################        For Big Screens                        ################################## -->
 <!-- ##################################################################################################################### -->
 
-
+    <div class="main-content">
     <div class="sm_hide big_s">
         <img class="logo" src="./Images/msk_logo.png" alt="" srcset="" width="100">
         <div class="marquee">
@@ -29,7 +34,10 @@
 <!-- ################################################Ganesh Parmar############################################################# -->
 
 <!-- For Small Screens -->
-<div class="bg_hide">
+
+
+
+<div class="bg_hide sm_s">
     <nav>
         <img src="./Images/Msk_logo_edited.png" alt="" srcset="" width="50">
         <h1 class="logo_name"><div>MSK Film's Koyla
@@ -114,6 +122,22 @@
         <h2>Our Gallery</h2>
         <p><i class="fa fa-quote-left"></i>MSK Film's Koyla here are some examples of our team's Photography.Note Some are sample photos taken from google<i class="fa fa-quote-right"></i></p>
     </div>
+
+    <div class="yt_vid">
+        <!-- <h3 class="g_heading">Videos</h3> -->
+        <div class="yt_wrap">
+            <iframe width="330" class="yt_v" src="https://www.youtube.com/embed/9_BVqYJRJLg" title="YouTube video player" frameborder="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="330" class="yt_v" src="https://www.youtube.com/embed/9_BVqYJRJLg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="330" class="yt_v" src="https://www.youtube.com/embed/NUCJ9QJHrgA" title="YouTube video player" frameborder="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="330" class="yt_v" src="https://www.youtube.com/embed/SZnIQihbpiE" title="YouTube video player" frameborder="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="330" class="yt_v" src="https://www.youtube.com/embed/SZnIQihbpiE" title="YouTube video player" frameborder="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+
+
+
+    </div>
+
+
     <div class="photos_wrap">
         <div class="samp_img samp_img_50 wed_pho_shoot"></div>
         <div class="samp_img samp_img_50 wed_pho_shoot_1"></div>
@@ -191,8 +215,16 @@
 <!-- fOOTER eND -->
 <a href="https://api.whatsapp.com/send?phone=918696973165&text=Hi" class="whatsapp bg_hide"> <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="35px" height="35px"><path fill="#fff" d="M4.9,43.3l2.7-9.8C5.9,30.6,5,27.3,5,24C5,13.5,13.5,5,24,5c5.1,0,9.8,2,13.4,5.6C41,14.2,43,18.9,43,24	c0,10.5-8.5,19-19,19c0,0,0,0,0,0h0c-3.2,0-6.3-0.8-9.1-2.3L4.9,43.3z"/><path fill="#fff" d="M4.9,43.8c-0.1,0-0.3-0.1-0.4-0.1c-0.1-0.1-0.2-0.3-0.1-0.5L7,33.5c-1.6-2.9-2.5-6.2-2.5-9.6	C4.5,13.2,13.3,4.5,24,4.5c5.2,0,10.1,2,13.8,5.7c3.7,3.7,5.7,8.6,5.7,13.8c0,10.7-8.7,19.5-19.5,19.5c-3.2,0-6.3-0.8-9.1-2.3	L5,43.8C5,43.8,4.9,43.8,4.9,43.8z"/><path fill="#cfd8dc" d="M24,5c5.1,0,9.8,2,13.4,5.6C41,14.2,43,18.9,43,24c0,10.5-8.5,19-19,19h0c-3.2,0-6.3-0.8-9.1-2.3L4.9,43.3	l2.7-9.8C5.9,30.6,5,27.3,5,24C5,13.5,13.5,5,24,5 M24,43L24,43L24,43 M24,43L24,43L24,43 M24,4L24,4C13,4,4,13,4,24	c0,3.4,0.8,6.7,2.5,9.6L3.9,43c-0.1,0.3,0,0.7,0.3,1c0.2,0.2,0.4,0.3,0.7,0.3c0.1,0,0.2,0,0.3,0l9.7-2.5c2.8,1.5,6,2.2,9.2,2.2	c11,0,20-9,20-20c0-5.3-2.1-10.4-5.8-14.1C34.4,6.1,29.4,4,24,4L24,4z"/><path fill="#40c351" d="M35.2,12.8c-3-3-6.9-4.6-11.2-4.6C15.3,8.2,8.2,15.3,8.2,24c0,3,0.8,5.9,2.4,8.4L11,33l-1.6,5.8l6-1.6l0.6,0.3	c2.4,1.4,5.2,2.2,8,2.2h0c8.7,0,15.8-7.1,15.8-15.8C39.8,19.8,38.2,15.8,35.2,12.8z"/><path fill="#fff" fill-rule="evenodd" d="M19.3,16c-0.4-0.8-0.7-0.8-1.1-0.8c-0.3,0-0.6,0-0.9,0s-0.8,0.1-1.3,0.6c-0.4,0.5-1.7,1.6-1.7,4	s1.7,4.6,1.9,4.9s3.3,5.3,8.1,7.2c4,1.6,4.8,1.3,5.7,1.2c0.9-0.1,2.8-1.1,3.2-2.3c0.4-1.1,0.4-2.1,0.3-2.3c-0.1-0.2-0.4-0.3-0.9-0.6	s-2.8-1.4-3.2-1.5c-0.4-0.2-0.8-0.2-1.1,0.2c-0.3,0.5-1.2,1.5-1.5,1.9c-0.3,0.3-0.6,0.4-1,0.1c-0.5-0.2-2-0.7-3.8-2.4	c-1.4-1.3-2.4-2.8-2.6-3.3c-0.3-0.5,0-0.7,0.2-1c0.2-0.2,0.5-0.6,0.7-0.8c0.2-0.3,0.3-0.5,0.5-0.8c0.2-0.3,0.1-0.6,0-0.8	C20.6,19.3,19.7,17,19.3,16z" clip-rule="evenodd"/></svg><b>Whatsapp Us!</b></a>
 
-
+</div>
 <!-- Small screen End -->
+    <script>
+        window.addEventListener('load', function() {
+            document.getElementsByClassName("loader")[0].style.opacity=0;
+            document.getElementsByClassName("loader")[0].style.display="none";
+            document.getElementsByClassName("main-content")[0].style.opacity=1;
+            document.getElementsByClassName("main-content")[0].style.display="block";
+    })
+    </script>
     <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
