--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 <body>
     <div class="loader">
-        <img class="logo" src="/Images/Msk_logo_edited.png" alt="" srcset="">
-        <img src="/Images/Rolling-1s-200px (1).gif" alt="" srcset="">
+        <img class="logo" src="./Images/Msk_logo_edited.png" alt="" srcset="">
+        <img src="./Images/Rolling-1s-200px (1).gif" alt="" srcset="">
     </div>
 <!-- ##################################################################################################################### -->
 <!-- ######################################        For Big Screens                        ################################## -->
