--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" href="./Images/msk_logo_mad_send.jfif" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
+    <!-- Owl Carosel -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
     <div class="loader">
-        <img class="logo" src="./Images/Msk_logo_edited.png" alt="" srcset="">
-        <img src="./Images/Rolling-1s-200px (1).gif" alt="" srcset="">
+        <img class="logo" src="/Images/Msk_logo_edited.png" alt="" srcset="">
+        <img src="/Images/Rolling-1s-200px (1).gif" alt="" srcset="">
     </div>
 <!-- ##################################################################################################################### -->
 <!-- ######################################        For Big Screens                        ################################## -->
@@ -75,46 +78,33 @@
             <footer>© 2021-2022 | Ganesh Parmar | All rights reserved</footer>
         </div>        
     </nav>
-    <div class="landing_pg">
-        <!-- <div class="dir left_dir" onclick="chnge_slide(1)"><img src="./Images/arrow-88-64.png"/></div>
-            <div class="dir right_dir" onclick="chnge_slide(-1)"><img src="./Images/arrow-88-right.png"/></i></div> -->
-            <div class="fake_slider" id="fake_slider">
-                <div class="slider_f">
-                    <div class="fake_1"></div>
-                    <div class="fake_2"></div>
-                </div>
-            </div>
-            <div class="container" id="container">
-            <div class="wedding_img img_2">
-                <div class="info">
-                    <h1>Wedding</h1>
-                    <h4>Photography</h4>
-                    <!-- <p>Capture your most memorable moments of life</p> -->
-                </div>
-            </div>
-            <div class="wedding_img">
-                <div class="info">
-                    <h1>Wedding</h1>
-                    <h4>Videography</h4>
-                    <!-- <p>Capture your most memorable moments of life</p> -->
-                </div>
-            </div>
-            <div class="wedding_img img_3">
-                <div class="info">
-                    <h1>Children</h1>
-                    <h4>Photography</h4>
-                    <!-- <p>Capture your most memorable moments of life</p> -->
-                </div>
-            </div>
-            <!-- <div class="current_pos"></div> -->
+
+    <header>
+        <div class="banner">
+            <img src="./Images//MskWork (4).png" alt="" width="100%">
         </div>
-        <div class="manual_slide">
-            <span class="circle active"></span>
-            <span class="circle"></span>
-            <span class="circle"></span>
-        </div>
-    </div>
-</div>
+    </header>
+
+
+     <!-- Owl Carosel -->
+     <main id="main-site">
+     <section id="banner-area">
+        <dic class="owl-carousel owl-theme">
+            <div class="item banner_1">
+
+            </div>
+            <div class="item banner_2">
+
+            </div>
+            <div class="item banner_3">
+
+            </div>
+        </dic>
+    </section>
+    </main>
+    <!-- Owl Carosel end -->
+
+
 
 <!-- My gallery -->
 <div class="g_container">
@@ -123,14 +113,21 @@
         <p><i class="fa fa-quote-left"></i>MSK Film's Koyla here are some examples of our team's Photography.Note Some are sample photos taken from google<i class="fa fa-quote-right"></i></p>
     </div>
 
+    <h3>
+        <img src="https://img.icons8.com/color/48/000000/youtube-play.png" width="50"/>YouTube
+    </h3>
     <div class="yt_vid">
-        <!-- <h3 class="g_heading">Videos</h3> -->
         <div class="yt_wrap">
-            <iframe width="330" class="yt_v" src="https://www.youtube.com/embed/9_BVqYJRJLg" title="YouTube video player" frameborder="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="330" class="yt_v" src="https://www.youtube.com/embed/9_BVqYJRJLg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="330" class="yt_v" src="https://www.youtube.com/embed/NUCJ9QJHrgA" title="YouTube video player" frameborder="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="330" class="yt_v" src="https://www.youtube.com/embed/SZnIQihbpiE" title="YouTube video player" frameborder="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="330" class="yt_v" src="https://www.youtube.com/embed/SZnIQihbpiE" title="YouTube video player" frameborder="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="350" class="yt_v" src="https://www.youtube.com/embed/5T-swxprPsE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="350" class="yt_v" src="https://www.youtube.com/embed/9_BVqYJRJLg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="350" class="yt_v" src="https://www.youtube.com/embed/NUCJ9QJHrgA" title="YouTube video player" frameborder="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="350" class="yt_v" src="https://www.youtube.com/embed/uTa7T4KdKk4" title="YouTube video player" frameborder="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="350" class="yt_v" src="https://www.youtube.com/embed/SZnIQihbpiE" title="YouTube video player" frameborder="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="yt_v yt_link">
+                <h4>Youtube Par Aur Dekhiye</h4>
+                <img src="https://img.icons8.com/color/48/000000/youtube-play.png" width="50"/>
+                <a href="https://www.youtube.com/channel/UCVm4xjWyO3ZxSG3BqrfX02Q/videos">Youtube Khole</a>
+            </div>
         </div>
 
 
@@ -138,13 +135,21 @@
     </div>
 
 
-    <div class="photos_wrap">
+    <div class="photos_wrap" id="photoGallery">
         <div class="samp_img samp_img_50 wed_pho_shoot"></div>
         <div class="samp_img samp_img_50 wed_pho_shoot_1"></div>
         <div class="samp_img samp_img_100 wed_real_shoot"></div>
         <div class="samp_img samp_img_40 stand_img_sam"></div>
         <div class="samp_img samp_img_60 wed_stand_bride"></div>
         <div class="samp_img samp_img_100 wed_100_0"></div>
+        <button id="imgBtn" class="">
+            <div class="showM hide">
+                Aur Dekhe!<i class="fas fa-chevron-down"></i>
+            </div>
+            <div class="showL">
+                Kam Dekhe!<i class="fas fa-chevron-up"></i>
+            </div>
+        </button>
     </div>
 </div>
 
@@ -225,9 +230,8 @@
             document.getElementsByClassName("main-content")[0].style.display="block";
     })
     </script>
-    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js" integrity="sha512-gY25nC63ddE0LcLPhxUJGFxa2GoIyA5FLym4UJqHDEMHjp8RET6Zn/SHo1sltt3WuVtqfyxECP38/daUc/WVEA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="index.js"></script>
 </body>
 </html>
