--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="samp_img samp_img_60 wed_stand_bride"></div>
         <div class="samp_img samp_img_100 wed_100_0"></div>
         <button id="imgBtn" class="">
-            <div class="showM hide">
+            <div class="showM">
                 Aur Dekhe!<i class="fas fa-chevron-down"></i>
             </div>
             <div class="showL">
