--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
-    <div class="loader" id="loader">
-        <img class="logo" src="/Images/Msk_logo_edited.png" alt="" srcset="">
-        <img src="/Images/Rolling-1s-200px (1).gif" alt="" srcset="">
+    <div class="loader_wrap">
+        <img class="logo" id="logo" src="/Images/Msk_logo_edited.png" alt="" srcset="" width="50">
+        <div class="loader" id="loader">
+            <img  src="/Images/Rolling-1s-200px (1).gif" alt="" srcset="">
+        </div>
     </div>
 <!-- ##################################################################################################################### -->
 <!-- ######################################        For Big Screens                        ################################## -->
 <!-- ##################################################################################################################### -->
 
-    <div class="main-content">
+<div class="main-content" id="main-content">
     <div class="sm_hide big_s">
         <img class="logo" src="./Images/msk_logo.png" alt="" srcset="" width="100">
         <div class="marquee">
@@ -42,7 +44,9 @@
 
 <div class="bg_hide sm_s">
     <nav>
-        <img src="./Images/Msk_logo_edited.png" alt="" srcset="" width="50">
+        <div></div>
+        <div></div>
+        <!-- <img src="./Images/Msk_logo_edited.png" alt="" srcset="" width="50"> -->
         <h1 class="logo_name"><div>MSK Film's Koyla
             <!-- <img src="./Images/std_vdo.png" alt="" srcset="" width="40"> -->
         </div></h1>
