--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 </head>
 <body>
     <div class="loader_wrap">
-        <img class="logo" id="logo" src="/Images/Msk_logo_edited.png" alt="" srcset="" width="50">
+        <img class="logo" id="logo" src="./Images/Msk_logo_edited.png" alt="" srcset="" width="50">
         <div class="loader" id="loader">
-            <img  src="/Images/Rolling-1s-200px (1).gif" alt="" srcset="">
+            <img  src="./Images/Rolling-1s-200px (1).gif" alt="" srcset="">
         </div>
     </div>
 <!-- ##################################################################################################################### -->
